
2)  Fix limited broadcast and detectnets/routeback interfaces.

3)  Use optimized 'split' for faster compilation.

4)  Validate host part in hosts file entry.

5)  Fix IPSECFILE=ipsec.

6)  Make ':noah' the default.

7)  Work around SELinux nonsense.

8)  Restore the 'refresh' command.

9)  Allow ipsec zone in GATEWAY ZONE column of the tunnels file.

Changes in 4.0.0 Beta 6

1)  First step to adding compiler debugging facility.

2)  Assume that iptables-restore is in the same directory as $IPTABLES

3)  Fix buildports.pm to handle bogus entries in /etc/protocols and
    /etc/services.

4)  Allow COMMENT in the accounting file.

Changes in 4.0.0 Beta 6

1)  Validate the DISPOSITION in /etc/shorewall/maclist entries.

2)  Add versioning to capabilities files.

3)  Improve compiler selection.

4)  DYNAMIC_ZONES=Yes and bridges.

5)  Implement port validation.

Changes in 4.0.0 Beta 5

1)  Fix undefined function call when both an input interface and an
    output interface are present.

2)  Externalize compiler and Compile.pm.

Changes in 4.0.0 Beta 4

1)  Fix the 'Modules' output of 'dump'

2)  Fix FW=xxx with IPSECFILE=ipsec.

3)  Fix wildcard-rule/NONE-policy interaction.

4)  Clean up generation of user-exit jacket functions.

5)  Add new bridge code.

6)  Fix bad bug in exclusion.

Changes in 4.0.0 Beta 2

1)  Fix screwup in get_routed_networks().

2)  Some minor tweaks.

3)  Fix synflood chain jumps.

4)  Simplify synflood handling and improve error diagnostics.

Changes in 4.0.0 Beta 1

1)  Fix add/delete <interface>.

2)  Fix do_proto() and 'use IPConfig' in Providers.pm.

3)  Implement dynamic host group detection.

Changes in 3.9.7

1)  Clean up release notes.

2)  Fix several bugs having to do with exclusion in the hosts file.

3)  Use '-m addrtype' in detectnet interface output rules.

4)  Fix find_hosts_by_option().

5)  Fix more hosts file bugs.

6)  Fix 'detect' in GATEWAY column of providers file.

8)  Other bug fixes (see release notes).
