@@ -331,7 +331,7 @@ sub finalize_object( $ ) {
     close $object;
     $object = 0;
     rename $tempfile, $file or fatal_error "Cannot Rename $tempfile to $file: $!";
-    chmod 0700, $file;
+    chmod 0700, $file or fatal_error "Cannot secure $file for execute access";
     progress_message3 "Shorewall configuration compiled to $file" unless $export;
 }
 
