@@ -22,7 +22,7 @@ Shorewall 4.0.0 RC 1
    Shorewall-perl compiler. This support utilizes the reduced-function
    physdev match support available in Linux kernel 2.6.20 and later.
 
-Problems corrected in 4.0.0 Beta 7.
+Problems corrected in 4.0.0 RC 1.
 
 1)  If 'routeback' and 'detectnets' were specified on an interface,
     limited broadcasts (to 255.255.255.255) and multicasts were dropped
@@ -40,6 +40,12 @@ Problems corrected in 4.0.0 Beta 7.
 
 4)  ipsec zones are now allowed in the GATEWAY ZONE(S) column when
     using Shorewall-perl.
+
+5)  A fatal error is now raised if the Shorewall-perl compiler is
+    unable to secure the output file for execute access.
+
+6)  Shell variables that have a value of zero are now handled
+    correctly.
 
 Other changes in Shorewall 4.0.0 RC 1.
 
