@@ -18,6 +18,10 @@ Changes in 4.0.0 RC 1
 
 9)  Allow ipsec zone in GATEWAY ZONE column of the tunnels file.
 
+10) Raise error on chmod failure.
+
+11) Handle shell variables with zero value correctly.
+
 Changes in 4.0.0 Beta 6
 
 1)  First step to adding compiler debugging facility.
